--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="skills">
             <h2>My Skills</h2>
             <div class="skill-row">
-                <img class="skill1" src="e.png" alt="">
+                <img class="skill1" src="images/coding.png" alt="">
                 <h3>Web Designing</h3>
                 <p>I started learning to code when I was 19 years old because I wanted to make my own video games. Over
                     time, I have gained a wealth of experience designing and developing web applications.</p>
             </div>
             <div class="skill-row">
-                <img class="skill2" src="e.png" alt="">
+                <img class="skill2" src="images/hacker.png" alt="">
                 <h3>Coding</h3>
                 <p>I started my coding journey with C in 2020 when I was 20 years old. Over time, I have gained little
                     more knowledge in several programming languages like: CPP,JS,Python etc. </p>
